# Gravity-Simulation

./: CMakeLists.txt  PhysicsHandler.cpp  PhysicsHandler.h  README.md  RealisticUniverse.sln  Renderer.h  StatisticsTracker.cpp  Universe.cpp  Universe.h  UserInterface.cpp  UserInterface.h  Vector2.h  main.cpp
RealisticUniverse/: RealisticUniverse.vcxproj  RealisticUniverse.vcxproj.filters
RealisticUniverse/include/: Object.h  StatisticsTracker.h  mymath.h
RealisticUniverse/src/: PhysicsHandler.cpp  Renderer.cpp  mymath.cpp
